Move category filter up to prevent cutoff by iOS keyboard on focus

--- a/src/components/SearchSelect/SearchSelect.module.scss
+++ b/src/components/SearchSelect/SearchSelect.module.scss
@@ -2,10 +2,11 @@
 
 .dropdownSearch {
   width: 100%;
+  margin-bottom: -$base-spacing;
 }
 
 .pillBar {
-  margin-top: 15px;
+  padding-top: $base-spacing;
   display: flex;
   flex-wrap: wrap;
 }
